feat(food-ordering-service): total refactor and clean code, and use lg5-spring lib
- course #96